Development Portal (2014-07-24 shi)
==============================
Fixed padding sizes for tables
Fixed translations for Donor titles in tables
Changed Donor subtitle for tables to be more descriptive
Added sorting of columns for tables
Changed "View All" links to "Back to Donor / Sector list"
Fixed translations accordingly
Fixed hover states including translations
Fixed missing hover state for sector title in table
Fixed hover titles for CRS to reflect footer
Added description when "data is missing" for table links
Added CSV download link for tables
Added translations for new CSV download link


Development Portal (2014-07-23 shi)
==============================
New CSS for template system
Text CSS for Index page (countries name list)
Added IATI Registry link to SAVi
Changed CRS description from countries to donors
Added more descriptions for tables
Fixed pointer styles for tables


Development Portal (2014-07-08 shi)
==============================
Fixed bug view_sectors header
Changed SAVi data quality text


Dashboard (2014-06-25 shi)
==============================
CSS for invalid country codes
CSS cleanup
Dash overview text
New table columns and headers


Dashboard (2014-06-19 shi)
==============================
CSS cleanup
Layouts for new columns
More tables for more tables
Added links to country codes
Styles for new cronlog page
Dash logo


Development Portal (2014-06-18 shi)
==============================
More columns for dashboard, css layouts
Changed text and translations reflecting updates every midnight GMT.


Development Portal (2014-06-17 shi)
==============================
Added column headers for data tables


Development Portal (2014-06-12 shi)
==============================
Dashboard changes
Cleaned up css duplicates


Development Portal (2014-05-30 shi)
==============================
About data sections restyled
About data sections translated


Development Portal (2014-05-28 shi)
==============================
CSS cleanup
Fixed hover tips