@@ -208,6 +208,9 @@ IATI出版社
 #amount_text
 总和
 
+#donor_activities_spend_text
+承担总额
+
 #donor_activities_percentage_tip_text
 花总承担的百分比
 
