@@ -208,6 +208,9 @@ End date
 #amount_text
 Amount
 
+#donor_activities_spend_text
+Total commitments
+
 #donor_activities_percentage_tip_text
 Percentage of total commitments spent
 
