@@ -208,6 +208,9 @@ Date de fin
 #amount_text
 Somme
 
+#donor_activities_spend_text
+Total des engagements
+
 #donor_activities_percentage_tip_text 
 Pourcentage du total des engagements passés
 
