@@ -208,6 +208,9 @@ IATI प्रकाशक
 #amount_text
 राशि
 
+#donor_activities_spend_text
+कुल प्रतिबद्धताओं
+
 #donor_activities_percentage_tip_text
 खर्च की गई कुल प्रतिबद्धताओं का प्रतिशत
 
