@@ -208,6 +208,9 @@ IATIパブリッシャ
 #amount_text
 合計
 
+#donor_activities_spend_text
+コミットメント総額
+
 #donor_activities_percentage_tip_text
 費やされた合計コミットメントの割合
 
