@@ -208,6 +208,9 @@ Fecha de finalización
 #amount_text
 Cantidad
 
+#donor_activities_spend_text
+Compromisos totales
+
 #donor_activities_percentage_tip_text 
 Porcentaje del total de compromisos pasados
 
