@@ -49,10 +49,10 @@
 			<span>{reported_by_text}</span>
 		</a>
 	</td>
-	<td class="value" title="{donor_activities_percentage_tip_text}">
+	<td class="value">
 		<div class="donor_activities_spend_wrap">
-			<div class="donor_activities_spend">{commitment}<span>{currency}</span></div>
-			<div class="donor_activities_barchart_wrap">
+			<div class="donor_activities_spend" title="{donor_activities_spend_text}">{commitment}<span>{currency}</span></div>
+			<div class="donor_activities_barchart_wrap" title="{donor_activities_percentage_tip_text}">
 				<div class="donor_activities_percent_max">
 					<div style="width:{pct}px;" class="donor_activities_percent"></div>
 				</div>
