@@ -6,12 +6,13 @@ Changed Donor subtitle for tables to be more descriptive
 Added sorting of columns for tables
 Changed "View All" links to "Back to Donor / Sector list"
 Fixed translations accordingly
-Fixed hover states including translations
+Fixed hover states for donor/sector tables including translations
 Fixed missing hover state for sector title in table
 Fixed hover titles for CRS to reflect footer
 Added description when "data is missing" for table links
 Added CSV download link for tables
 Added translations for new CSV download link
+Fixed hover state for bar graphs in donor/sector activities
 
 
 Development Portal (2014-07-23 shi)
